# actix-web-nextjs-spa

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
fixtures/001/: 404.html  index.html  page.html
fixtures/001/[firstId]/items/: [itemId].html
fixtures/001/_next/static/GYFSUcVAM4loPjHZxe4jC/: _buildManifest.js
fixtures/001/_next/static/chunks/pages/: index-a9571ddb56467d8a.js  page-8f64886f0640a665.js
fixtures/001/_next/static/chunks/pages/[firstId]/items/: [itemId]-304f223806a9e216.js
src/: lib.rs
